# abrio

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  api-reference.md  architecture-overview.md  database-models.md  dispatch-flow.md  observability.md  performance.md  rate-limits.md  running-and-testing.md
monitoring/: README.md  docker-compose.yml
monitoring/grafana/provisioning/dashboards/: abrio-overview.json  dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: benchmark.py  loadtest.py
src/: __init__.py  backend_pre_start.py  main.py
src/api/: deps.py  rate_limit.py  router.py
src/api/routes/: health.py  messages.py  pricing.py  tasks.py  users.py
src/api/schemas/: balance.py  health.py  messages.py  pagination.py  pricing.py  users.py
src/api/v1/: router.py
src/app/usecases/: balance.py  dispatch.py  messages.py  users.py
src/core/: config.py  logging.py  metrics.py  observability.py  request_context.py
src/domain/: __init__.py  enums.py  errors.py
src/infra/: __init__.py
src/infra/db/: init_db.py  session.py
src/infra/db/models/: __init__.py  balance.py  dispatch_job.py  message.py  user.py
src/infra/db/repositories/: balance.py  dispatch_jobs.py  (+2 more)
src/infra/providers/: __init__.py  dummy.py  mock.py  types.py
src/infra/workers/: celery_app.py  dispatch_relay.py  dispatch_tasks.py
src/tests/: conftest.py  test_config.py  test_health.py  test_logging.py  test_users_balance_integration.py  test_users_balance_repository.py  test_users_balance_unit.py
src/tests/integration/: conftest.py  test_dispatch_concurrency.py  test_idempotency_concurrency.py  test_messages_integration.py  test_messages_repository.py  test_users_balance_integration.py  test_users_balance_repository.py
src/tests/unit/: test_config.py  test_dispatch_jobs_repository.py  test_dispatch_unit.py  test_health.py  test_logging.py  test_messages_unit.py  test_observability.py  test_rate_limit.py  test_users_balance_unit.py
