[project]
name = "sms-gateway"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
    "python-json-logger>=2.0.0",
    "phonenumbers>=8.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
    "locust>=2.31.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "ARG",
    "PTH",
    "RUF",
]
ignore = [
    "B008",
    "ARG001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=gateway",
    "--cov-report=term-missing",
]
markers = [
    "unit: fast unit tests",
    "integration: tests requiring external services",
    "concurrency: tests for concurrent balance and idempotency behavior",
]

[tool.coverage.run]
branch = true
source = ["src/gateway"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
